# Segmentation-AI-project

./: .gitignore  AI.ipynb  README.md  pyproject.toml
AI_Project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Desktop/Projet AI vacances/: AI semgentation.ipynb
